Metiendo historias de formato Bootstrap

--- a/src/app/esqueleto/cuerpo/cuerpo.component.html
+++ b/src/app/esqueleto/cuerpo/cuerpo.component.html
@@ -1,3 +1,6 @@
-<p>cuerpo works!</p>
+<div class="container-fluid m-auto p-3">
+  <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
+
+
