--- a/src/app/esqueleto/encabezado/encabezado.component.html
+++ b/src/app/esqueleto/encabezado/encabezado.component.html
@@ -1,1 +1,32 @@
-<p>encabezado works!</p>
+<header class="row">
+  <div class="col-8">
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="">Home</a>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
+          >Acerca de</a
+        >
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Info</a>
+          <a class="dropdown-item" href="#">Contacto</a>
+        </div>
+      </li>
+
+      <!-- <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li> -->
+    </ul>
+  </div>
+  <div class="col-4 alert-dark">
+    <h4>
+      {{ titulo }}
+    </h4>
+  </div>
+</header>
