--- a/src/app/esqueleto/pie/pie.component.html
+++ b/src/app/esqueleto/pie/pie.component.html
@@ -1,1 +1,5 @@
-<p>pie works!</p>
+<footer class="fixed-bottom m-auto">
+  <a href="mailto:jlportus@mail.false">
+    Contacta con jlPortus
+  </a>
+</footer>
