--- a/src/app/esqueleto/encabezado/encabezado.component.html
+++ b/src/app/esqueleto/encabezado/encabezado.component.html
@@ -10,8 +10,8 @@
           >Acerca de</a
         >
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Info</a>
-          <a class="dropdown-item" href="#">Contacto</a>
+          <a class="dropdown-item" routerLink="acerca/info">Info</a>
+          <a class="dropdown-item" routerLink="acerca/contacto">Contacto</a>
         </div>
       </li>
 
