Pasando parametros Binding

--- a/src/app/comunes/formulario/formulario.component.html
+++ b/src/app/comunes/formulario/formulario.component.html
@@ -1,1 +1,75 @@
-<p>formulario works!</p>
+<div class="container">
+  <h3>Formulario</h3>
+  <div class="row fluid">
+    <input
+      value="Introduzca Participante"
+      type="button"
+      (click)="formHidden = false"
+    />
+    <input
+      value="Actualice Participante"
+      type="button"
+      (click)="formHidden = true"
+    />
+    <input
+      value="Elimine Participante"
+      type="button"
+      (click)="formHidden = true"
+    />
+  </div>
+
+  <form class="my-4">
+    <!-- input nombre -->
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Nombre</span>
+      </div>
+      <input name="nombre" type="text" [(ngModel)]="persona.nombre" class="form-control" />
+    </div>
+    <!-- input nif -->
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">NIF</span>
+      </div>
+      <input
+        name="nif"
+        type="text"
+        [(ngModel)]="persona.nif"
+        class="form-control"
+      />
+    </div>
+    <!-- input telefono -->
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Telefono</span>
+      </div>
+      <input name="telefono" type="text" [(ngModel)]="persona.telefono" class="form-control" />
+    </div>
+    <!-- input correo -->
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">@</span>
+      </div>
+      <input
+        name="mail"
+        type="text"
+        class="form-control"
+        [(ngModel)]="persona.mail"
+        placeholder=""
+      />
+    </div>
+    <!-- desplegable -->
+    <select name="situacionLaboral" [(ngModel)]="persona.situacionLboral" class="custom-select">
+      <option selected>Trabajas o estudias?</option>
+      <option value="desconocido">desconocido</option>
+      <option value="Galgo">Galgo</option>
+      <option value="Parado">Parado</option>
+      <option value="Levantador de Paises">Levantador de Paises</option>
+    </select>
+  <input value="salvar" type="submit" (click)="salvarPersona()" />
+
+  </form>
+  <pre>
+    <p>{{ persona | json }}</p>
+  </pre>
+</div>
