Ex-Partidos-Creando Modulos y enrutado

--- a/src/app/esqueleto/encabezado/encabezado.component.html
+++ b/src/app/esqueleto/encabezado/encabezado.component.html
@@ -9,6 +9,10 @@
         <a class="nav-link" routerLink="formulario">Formulario</a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link" routerLink="partidos">Partidos</a>
+      </li>
+
       <!-- <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li> -->
