--- a/src/app/ejercicios/partidos/partidos/partido/partido.component.html
+++ b/src/app/ejercicios/partidos/partidos/partido/partido.component.html
@@ -1,1 +1,16 @@
 <p>partido works!</p>
+
+<div class="row">
+  <span> Partido de {{ competicion }} - &nbsp; </span>
+  <span [class]="claseObjeto"> local: {{ idLocal }} </span>
+  <span> &nbsp; {{ resultado }} &nbsp;</span>
+  <span [ngClass]="{ 'alert alert-info': true, 'text-danger': true }">
+    {{ idVisitante }} :Visitante</span
+  >
+  <input type="button" value="Mostrar Tarjetas" (click)="mostrarTarjetas()" />
+  <span [class.d-none]="visibilidadTarjetas"> Tarjetas {{ tarjetas }}, {{estado}}</span>
+  <section>
+    <label for="estado">Estado</label>
+    <input type="text" name="estado" [(ngModel)]="estado" />
+  </section>
+</div>
