Mostrando array de partidos desde el Padre *ngFor

--- a/src/app/ejercicios/partidos/partidos/partidos.component.html
+++ b/src/app/ejercicios/partidos/partidos/partidos.component.html
@@ -1,2 +1,4 @@
 <p>partidos works!</p>
-<app-partido [partido]="arrayDepartidos[0]"></app-partido>
+<div *ngFor="let partidoPadre of arrayDepartidos">
+  <app-partido [partido]="partidoPadre"></app-partido>
+</div>
